@@ -131,6 +131,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   LanguageConverter class)
 * (bug 17844) Redirect users to a specific page when they log in, see 
   $wgRedirectOnLogin
+* Added a link to Special:UserRights on Special:Contributions for privileged users
 
 === Bug fixes in 1.15 ===
 * (bug 16968) Special:Upload no longer throws useless warnings.
